erDiagram
    USERS ||--o{ BOOKINGS : makes
    SHOWTIMES ||--o{ BOOKINGS : receives
    MOVIES ||--o{ SHOWTIMES : scheduled_for
    THEATRES ||--o{ SHOWTIMES : hosts
    BOOKINGS ||--o| PAYMENTS : paid_by

    USERS {
        int user_id PK
        varchar name
        varchar email UK
        varchar password
        varchar phone
        enum role
        timestamp created_at
    }

    MOVIES {
        int movie_id PK
        varchar title
        varchar genre
        varchar language
        int duration
        text description
        varchar poster
        enum status
        timestamp created_at
    }

    THEATRES {
        int theatre_id PK
        varchar name
        varchar location
        int total_seats
        enum status
        timestamp created_at
    }

    SHOWTIMES {
        int showtime_id PK
        int movie_id FK
        int theatre_id FK
        date show_date
        time show_time
        decimal price
        enum status
        timestamp created_at
    }

    BOOKINGS {
        int booking_id PK
        int user_id FK
        int showtime_id FK
        varchar seat_numbers
        decimal total_amount
        enum booking_status
        timestamp booking_date
    }

    PAYMENTS {
        int payment_id PK
        int booking_id FK
        varchar card_name
        varchar payment_method
        decimal amount
        timestamp payment_date
        enum status
    }
